# Frames-utils

./: .ghc.environment.x86_64-darwin-8.6.3  .gitignore  CHANGELOG.md  Changelog.md  Frames-utils.cabal  cabal.project  hie.yaml  report.html
bench/: BenchAll.hs  report.html
bench/Bench/: MapReduce.hs
examples/: FrameRegressions.hs  MapReduce.hs  SampleData.csv  Transforms.hs
examples/html/: FrameRegressions.html  mapReduce.html  transformations.html
pandoc-templates/: minWithVega-pandoc.html
src/Control/: Aggregations.hs  MapReduce.hs
src/Control/MapReduce/: Parallel.hs  Simple.hs
src/Control/Monad/Freer/: Docs.hs  Html.hs  Logger.hs  Pandoc.hs  PandocMonad.hs  Random.hs
src/Frames/: Aggregations.hs  Constraints.hs  Conversion.hs  Enumerations.hs  Folds.hs  FromTextCells.hs  Heidi.hs  KMeans.hs  MapReduce.hs  MapTH.hs  MaybeUtils.hs  Misc.hs  OrphanInstances.hs  ParseableTypes.hs  Regression.hs  ScatterMerge.hs  Serialize.hs  SimpleJoins.hs  Streamly.hs  Table.hs  Transform.hs  Utils.hs  VegaLite.hs  VegaLiteTemplates.hs
src/Frames/Aggregations/: Core.hs  Folds.hs  Monoidal.hs
src/Frames/Html/: Table.hs
src/Frames/Streamly/: CSV.hs  InCore.hs  Transform.hs
src/Frames/VegaLite/: Clusters.hs  Histogram.hs  Regression.hs  Utils.hs
src/Html/: FreerHtml.hs  Report.hs
src/Html/Blaze/: Report.hs
src/Html/Lucid/: Report.hs
src/Math/: HMatrixUtils.hs  KMeans.hs  Rescale.hs
src/Math/Regression/: LeastSquares.hs  LeastSquares_flymake.hs  Regression.hs
src/Pandoc/: Report.hs
src/System/: PipesLogger.hs
src/Text/Pandoc/: Report.hs
test/: UnitTests.hs  UnitTests_flymake.hs
