cabal-version: 2.2
name: Frames-utils
version: 0.2.0.1
license: BSD-3-Clause
license-file: LICENSE
maintainer: adam_conner_sax@yahoo.com
author: Adam Conner-Sax
synopsis: Useful frames functions
category: Data
build-type: Simple
extra-source-files:
    CHANGELOG.md

common deps
  build-depends:
                base                              >= 4.11.1.0 && <4.13,
                blaze-colonnade                   >= 1.2.2 && < 1.3,
                blaze-html                        >= 0.9.1 && < 0.10,
                colonnade                         >= 1.2.0 && < 1.3,
                containers                        >= 0.5.0.0 && <0.7,
                discrimination                    >= 0.3 && < 0.4,
                foldl                             >= 1.4.5 && < 1.5,
                foldl-statistics                  >= 0.1.5 && < 0.2,
                Frames                            >= 0.6.1 && < 0.7,
                Frames-map-reduce                 >= 0.1.0.0 && < 0.2.0.0,                                                     
                freer-simple                      >= 1.2.1 && < 1.3,
                hashable                          >= 1.2.7 && < 1.3,
                histogram-fill                    >= 0.9.1 && < 0.10,
                here                              >= 1.2.13 && < 1.3,
                hmatrix                           >= 0.19.0 && < 0.20,
                hmatrix-gsl                       >= 0.19.0 && < 0.20,
                hvega                             >= 0.1.0 && <= 0.2.0.0,
                knit-haskell                      >= 0.1.0.0 && < 0.4.0.0,
                lens                              >= 4.17 && < 4.18,
                lucid                             >= 2.9.11 && < 2.10,
                lucid-colonnade                   >= 1.0.1 && < 1.1,
                map-reduce-folds                  >= 0.1.0.0 && < 0.2.0.0,
                mltool                            >= 0.2.0 && < 0.3,
                pipes                             >= 4.3.9 && < 4.4,
                polysemy                          >= 0.1.1.0 && < 0.2.0.0,
                profunctors                       >= 5.3 && < 5.4,
                random-fu                         >= 0.2.7 && < 0.3,
                readable                          >= 0.3.1 && < 0.4,
                statistics                        >= 0.15.0 && < 0.16,
                text                              >= 1.2.3.1 && <1.3,
                time                              >= 1.8.0 && < 1.9,
                unordered-containers              >= 0.2.10 && < 0.3,
                vector                            >= 0.12.0 && < 0.13,
                vinyl                             >= 0.11.0 && < 0.12,
                                
library
    import: deps    
    exposed-modules:
                    Frames.Transform
                    Frames.Constraints
                    Frames.Conversion
                    Frames.ScatterMerge
                    Frames.KMeans
                    Frames.Regression
                    Frames.MaybeUtils
                    Frames.Table
                    Frames.ParseableTypes
                    Frames.Utils
                    Frames.VegaLite
                    Frames.VegaLite.Utils
                    Frames.VegaLite.Histogram
                    Frames.VegaLite.Regression
                    Frames.VegaLite.Clusters
                    Math.HMatrixUtils
                    Math.KMeans
                    Math.Rescale
                    Math.Regression.Regression
                    Math.Regression.LeastSquares
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -O2 -funbox-strict-fields
    build-depends:

test-suite FrameRegressions
    import: deps           
    type: exitcode-stdio-1.0       
    main-is: FrameRegressions.hs
    hs-source-dirs: examples
    ghc-options: -O0 -Wall
    build-depends: Frames-utils -any
    default-language: Haskell2010
    
test-suite MapReduce
    import: deps                  
    type: exitcode-stdio-1.0                  
    main-is: MapReduce.hs
    hs-source-dirs: examples
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
                 -funbox-strict-fields
    build-depends: Frames-utils -any
    default-language: Haskell2010
    
test-suite Transforms
    import: deps                  
    type: exitcode-stdio-1.0                  
    main-is: Transforms.hs
    hs-source-dirs: examples
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
                 -funbox-strict-fields
    build-depends: Frames-utils -any
    default-language: Haskell2010
    
test-suite test-frames-utils
    import: deps            
    type: exitcode-stdio-1.0
    main-is: UnitTests.hs
    hs-source-dirs: test
    build-depends: Frames-utils -any,
                   easytest -any
    default-language: Haskell2010
    
benchmark bench-all
    type: exitcode-stdio-1.0
    main-is: BenchAll.hs
    hs-source-dirs: bench
    ghc-options: -O2 -threaded -with-rtsopts=-N -funbox-strict-fields
                 -fno-warn-unused-binds -fno-warn-unused-matches
    build-depends:
        base >=4.11.1.0 && <4.13,
        blaze-html -any,
        containers >=0.6.0.1 && <0.7,
        Frames -any,
        foldl -any,
        hmatrix -any,
        lucid -any,
        monoidal-containers -any,
        profunctors -any,
        random-fu -any,
        random-source -any,
        statistics -any,
        freer-simple -any,
        text >=1.2.3.1 && <1.3,
        vector -any,
        vinyl >=0.10.0.1,
        Frames-map-reduce -any,
        Frames-utils -any,
        map-reduce-folds -any,
        base >=4.12.0.0 && <4.13,
        criterion -any,
        deepseq >=1.4.4.0 && <1.5
    default-language: Haskell2010