cabal-version: 3.0
name: Frames-utils
version: 0.3.4.0
license: BSD-3-Clause
license-file: LICENSE
maintainer: adam_conner_sax@yahoo.com
author: Adam Conner-Sax
synopsis: Useful frames functions
category: Data
build-type: Simple
extra-source-files:
    CHANGELOG.md

flag streamly9
    Description: require streamly >= 0.9
    Manual: True
    Default: False


common deps
  build-depends:
                base                              >= 4.11.1.0 && <5,
                array                             >= 0.5.0.0 && <0.6,
                blaze-colonnade                   >= 1.2.2 && < 1.3,
                blaze-html                        >= 0.9.1 && < 0.10,
                cereal                            >= 0.5.7 && < 0.6,
                cereal-time                       >= 0.1.0 && < 0.2,
                clock                             >= 0.8   && < 0.9,
                colonnade                         >= 1.2.0 && < 1.3,
                containers                        >= 0.5.0.0 && <0.8,
                deepseq                           >= 1.4.3 && < 1.6,
                discrimination                    >= 0.3 && < 0.6,
                exceptions                        >= 0.10.0 && < 0.11,
                foldl                             >= 1.4.5 && < 1.6,
                foldl-statistics                  >= 0.1.5 && < 0.2,
                Frames                            >= 0.6.1 && < 0.8,
                Frames-map-reduce                 >= 0.1.0.0 && < 0.5,
                Frames-streamly                   >= 0.3 && < 0.4,
--                freer-simple                      >= 1.2.1 && < 1.3,
                hashable                          >= 1.2.7 && < 1.6,
                histogram-fill                    >= 0.9.1 && < 0.10,
                heidi                             >= 0.1.0 && < 0.2,
                here                              >= 1.2.13 && < 1.3,
                hmatrix                           >= 0.19.0 && < 0.21,
                hmatrix-gsl                       >= 0.19.0 && < 0.20,
                hvega                             >= 0.6.0 && < 0.13,
                lens                              >= 4.17 && < 5.3,
                log-domain                        >= 0.13.2 && < 0.14,
                lucid                             >= 2.9.11 && < 2.12,
                lucid-colonnade                   >= 1.0.1 && < 1.1,
                map-reduce-folds                  >= 0.1.0 && < 0.2,
                pipes                             >= 4.3.9 && < 4.4,
                primitive                         >= 0.7.0.0 && < 0.10,
                profunctors                       >= 5.3 && < 5.7,
                random-fu                         >= 0.2.7.7 && < 0.4,
                readable                          >= 0.3.1 && < 0.4,
                relude                            >= 1.0.0 && < 1.3,
                say                               >= 0.1.0 && < 0.2,
                statistics                        >= 0.15.0 && < 0.17,
                text                              >= 1.2.3.1 && <2.2,
                time                              >= 1.8.0 && < 2,
                unordered-containers              >= 0.2.10 && < 0.3,
                vector                            >= 0.12.0 && < 0.14,
                vinyl                             >= 0.11.0 && < 0.15,
  if flag(streamly9)
    build-depends:
      streamly >=0.9 && <0.11, streamly-core >=0.1.0 && <0.3, streamly-bytestring >=0.2.0 && < 0.3
  else
    build-depends: streamly >=0.8 && <0.9, streamly-bytestring >=0.1.0 && <0.2

library
    import: deps
    exposed-modules:
                    Frames.Transform
                    Frames.Enumerations
                    Frames.Constraints
                    Frames.Conversion
                    Frames.FromTextCells
                    Frames.Heidi
                    Frames.KMeans
                    Frames.Regression
                    Frames.MaybeUtils
                    Frames.Table
                    Frames.ParseableTypes
                    Frames.ScatterMerge
                    Frames.Misc
                    Frames.SimpleJoins
                    Frames.VegaLite
                    Frames.VegaLite.Utils
                    Frames.VegaLite.Histogram
                    Frames.VegaLite.Regression
                    Frames.VegaLite.Clusters
                    Math.HMatrixUtils
                    Math.KMeans
                    Math.Rescale
                    Math.Regression.Regression
                    Math.Regression.LeastSquares
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -O2 -funbox-strict-fields -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
--    ghc-options: -Wall -O2 -funbox-strict-fields -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16 -fplugin=Fusion.Plugin
    default-extensions: StrictData
    build-depends:
    mixins: base hiding (Prelude)
          , relude (Relude as Prelude
          , Relude.Extra
            )

test-suite FrameRegressions
    import: deps
    type: exitcode-stdio-1.0
    main-is: FrameRegressions.hs
    hs-source-dirs: examples
    ghc-options: -O0 -Wall
    build-depends: Frames-utils -any
                 , knit-haskell >= 0.7.0.0 && < 0.11
    default-language: Haskell2010

test-suite MapReduce
    import: deps
    type: exitcode-stdio-1.0
    main-is: MapReduce.hs
    hs-source-dirs: examples
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
                 -funbox-strict-fields
    build-depends: Frames-utils -any
                 , knit-haskell
    default-language: Haskell2010

test-suite Transforms
    import: deps
    type: exitcode-stdio-1.0
    main-is: Transforms.hs
    hs-source-dirs: examples
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
                 -funbox-strict-fields
    build-depends: Frames-utils -any
                 , knit-haskell
    default-language: Haskell2010

test-suite test-frames-utils
    import: deps
    type: exitcode-stdio-1.0
    main-is: UnitTests.hs
    hs-source-dirs: test
    build-depends: Frames-utils -any
                 , easytest -any
                 , knit-haskell
    default-language: Haskell2010

benchmark bench-all
    type: exitcode-stdio-1.0
    main-is: BenchAll.hs
    hs-source-dirs: bench
    ghc-options: -O2 -threaded -with-rtsopts=-N -funbox-strict-fields
                 -fno-warn-unused-binds -fno-warn-unused-matches
    build-depends:
        base >=4.11.1.0 && <5,
        blaze-html -any,
        containers >=0.6.0.1 && <0.8,
        Frames -any,
        foldl -any,
        hmatrix -any,
        knit-haskell,
        lucid -any,
--        monoidal-containers -any,
        profunctors -any,
        random-fu -any,
--        random-source -any,
        statistics -any,
--        freer-simple -any,
        text >=1.2.3.1 && <2.2,
        vector -any,
        vinyl >=0.10.0.1,
        Frames-map-reduce -any,
        Frames-utils -any,
        map-reduce-folds -any,
        criterion -any,
        deepseq >=1.4.4.0 && <1.6
    default-language: Haskell2010
